# QTpcl

./: CMakeLists.txt  README.md
build-src-Desktop_Qt_5_12_11_GCC_64bit-Debug/: CMakeCache.txt.prev  qrc_CloudViewer.cpp
build-src-Desktop_Qt_5_12_11_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-dd9ad9aeaad14f577141.json  cmakeFiles-v1-5b5a33654ec801549710.json  codemodel-v2-0e402cfd466993a00436.json  index-2022-03-09T07-55-13-0534.json  target-CloudViewer-Debug-d42e2207cd549ba6eec3.json
build-src-Desktop_Qt_5_12_11_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-ee494792b19ca98ae531.json  cmakeFiles-v1-380f0b92d90fff164710.json  codemodel-v2-f834bc0ef21ecded9533.json  index-2022-03-09T07-50-45-0578.json  target-CloudViewer-Debug-8201c2ef87ab4e5a45e9.json  target-CloudViewer_autogen-Debug-3735fe14153eb9afde30.json
build-src-Desktop_Qt_5_12_11_GCC_64bit-Debug/CloudViewer_autogen/: moc_predefs.h  mocs_compilation.cpp
build-src-Desktop_Qt_5_12_11_GCC_64bit-Debug/CloudViewer_autogen/EWIEGA46WW/: moc_AboutWin.cpp  moc_CloudViewer.cpp
build-src-Desktop_Qt_5_12_11_GCC_64bit-Debug/CloudViewer_autogen/include/: ui_AboutWin.h  ui_CloudViewer.h
src/: CMakeLists.txt  CloudViewer.cpp  CloudViewer.h  CloudViewer.ui  FileIO.cpp  MyCloud.cpp  MyCloud.h  PointProcess.cpp  PointProcess.h  camconcrol.h  downsimplewin.cpp  downsimplewin.h  downsimplewin.ui  extractionboundarywin.cpp  extractionboundarywin.h  extractionboundarywin.h.autosave  extractionboundarywin.ui  pointroiwin.cpp  pointroiwin.h  pointroiwin.ui  removewin.cpp  removewin.h  removewin.ui
